<resources>
    <string name="app_name">北科社交距離</string>

    <string name="person_bottom_navigation_text">個人</string>
    <string name="school_bottom_navigation_text">全校</string>
    <string name="course_bottom_navigation_text">班級</string>
    <string name="setting_bottom_navigation_text">設定</string>
    <string name="debug_bottom_navigation_text">測試頁面</string>
    <string name="report_bottom_navigation_text">新增通報</string>

    <string name="setting_logout_text"> 登出 </string>

    <string name="hello_text">北科社交距離 v0.01</string>
    <string name="hello_page_icon">hello page icon</string>
    <string name="login_title">登入</string>
    <string name="login_studentID">學號</string>
    <string name="login_password">密碼</string>
    <string name="login_readme">記得我</string>
    <string name="login_login_button">登入</string>
    <string name="setting_option_reset_warning"> 解除警示狀態 </string>
    <string name="setting_option_about_us"> 關於我們 </string>
    <string name="setting_option_logout"> 登出 </string>

    <string name="lobby_menu_notification">學生確診通報</string>
    <string name="lobby_menu_notification_rapid">快篩通報</string>
    <string name="lobby_menu_notification_PCR">PCR通報</string>
    <string name="lobby_menu_notification_course">課程足跡通報</string>
    <string name="lobby_menu_other_footprints">其他足跡</string>
    <string name="lobby_menu_add_footprints">新增足跡</string>
    <string name="lobby_menu_finish_footprints">其他足跡完成</string>
    <string name="login_post_URL" translatable="false"> https://sers-backend-xyvgk4v6da-de.a.run.app/login?username=%s&amp;password=%s&amp;year=%d&amp;sem=%d </string>
    <string name="photo_post_URL" translatable="false"> https://sers-backend-xyvgk4v6da-de.a.run.app/login?username=%s&amp;password=%s&amp;filename=%s </string>
    <string name="school_confirm_case_URL" translatable="false"> https://sers-backend-xyvgk4v6da-de.a.run.app/get_confirm_data </string>
    <string name="confirm_course_URL" translatable="false"> https://sers-backend-xyvgk4v6da-de.a.run.app/get_confirm_course </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification_rapidAntigenTest_date">快篩陽性日期</string>
    <string name="notification_rapidAntigenTest_certificate">上傳快篩陽性證明</string>
    <string name="notification_rapidAntigenTest_certificate_hint">請確實拍攝陽性快篩試劑\n將個人證件置於快篩試劑左側</string>
    <string name="notification_rapidAntigenTest_result">快篩檢測結果回報</string>
    <string name="notification_PCR_result">PCR 檢測結果回報</string>

    <string name="notification_PCR_positive">陽性</string>
    <string name="notification_PCR_negative">陰性</string>
    <string name="notification_PCR_unknown">未知</string>
    <string name="notification_PCR_date">PCR陽性日期</string>
    <string name="notification_PCR_certification">PCR 陽性證明</string>
    <string name="notification_PCR_certification_hint">請擷取\"健保快易通\"的證明畫面</string>
    <string name="notification_take_picture">上傳照片</string>
    <string name="notification_dateHint">yyyy/mm/dd</string>

    <string name="nextButton">下一步</string>
    <string name="addfootprints_dateHint">yyyy/mm/dd</string>
    <string name="addfootprints_timeHint">hh:mm</string>

    <string name="sharedPreferences_EditText_positive_date">EditText positive date</string>
    <string name="sharedPreferences_EditText_isolation_date_start">EditText isolation start date</string>
    <string name="sharedPreferences_EditText_isolation_date_end">EditText isolation end date</string>
    <string name="sharedPreferences_ImageView_PCR_certification">ImageView pcr certification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="warning_lift_message_1"> 1. 我已進行快篩，並且為陰性。 </string>
    <string name="warning_lift_message_2"> 2. 我會注意是否有發燒、呼吸道症狀、腹瀉、嗅／味覺異常等 Covid-19 疑似症狀，若出現症狀，會自行快篩。 </string>
    <string name="warning_lift_message_3"> 3. 我如果快篩陽性，會佩戴醫療用口罩就醫採檢，出門時避免搭乘大眾運輸。 </string>
    <string name="warning_lift_message_4"> 4. 我已通知同住家人有收到「接觸通知」警示，要採取適當防護措施，例如勤洗手，戴口罩等。 </string>
    <string name="warning_lift_message_5"> 5. 我會避免非必要的家庭聚會及拜訪。 </string>
    <string name="warning_lift_message_6"> 6. 我會避免參加無法保持社交距離及接觸不特定對象的活動。 </string>
    <string name="warning_lift_message_7"> 7. 我會避免參加可以免戴口罩的室內活動或工作。 </string>

</resources>