<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/person"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/person_bottom_navigation_text" />
    <item
        android:id="@+id/debug"
        android:icon="@drawable/ic_baseline_build_24"
        android:title="@string/debug_bottom_navigation_text" />
    <item
        android:id="@+id/school"
        android:icon="@drawable/ic_baseline_school_24"
        android:title="@string/school_bottom_navigation_text" />
    <item
        android:id="@+id/course"
        android:icon="@drawable/ic_baseline_class_24"
        android:title="@string/course_bottom_navigation_text" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting_bottom_navigation_text" />
</menu>