<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextView_rapidAntigenTest_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/notification_rapidAntigenTest_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditText_rapidAntigenTest_date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/notification_dateHint"
        android:maxLength="10"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/TextView_rapidAntigenTest_date"
        app:layout_constraintTop_toBottomOf="@+id/TextView_rapidAntigenTest_date" />

    <ImageButton
        android:id="@+id/ImageButton_rapidAntigenTest_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notification_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/EditText_rapidAntigenTest_date"
        app:layout_constraintStart_toEndOf="@+id/EditText_rapidAntigenTest_date" />

    <TextView
        android:id="@+id/TextView_rapidAntigenTest_certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/notification_rapidAntigenTest_certificate"
        app:layout_constraintStart_toStartOf="@+id/EditText_rapidAntigenTest_date"
        app:layout_constraintTop_toBottomOf="@+id/EditText_rapidAntigenTest_date" />

    <TextView
        android:id="@+id/TextView_rapidAntigenTest_certificate_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/notification_rapidAntigenTest_certificate_hint"
        app:layout_constraintBottom_toBottomOf="@+id/TextView_rapidAntigenTest_certificate"
        app:layout_constraintStart_toEndOf="@+id/TextView_rapidAntigenTest_certificate" />

    <Button
        android:id="@+id/Button_rapidAntigenTest_certification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/notification_take_picture"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/TextView_rapidAntigenTest_certificate"
        app:layout_constraintTop_toBottomOf="@+id/TextView_rapidAntigenTest_certificate" />

    <ImageButton
        android:id="@+id/Button_rapidAntigenTest_certification_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notification_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/Button_rapidAntigenTest_certification"
        app:layout_constraintStart_toEndOf="@+id/Button_rapidAntigenTest_certification" />

    <ImageView
        android:id="@+id/ImageView_rapidAntigenTest_certification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/Button_rapidAntigenTest_certification"
        app:layout_constraintTop_toBottomOf="@+id/Button_rapidAntigenTest_certification"/>

    <Button
        android:id="@+id/Button_next_rapid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/next_button_selector"
        android:enabled="false"
        android:text="@string/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView_rapidAntigenTest_certification" />

</androidx.constraintlayout.widget.ConstraintLayout>