<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".activity.WarningLiftActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_horizontal|center_vertical"
        android:text="解除警示狀態"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="65">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_1"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_2"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_3"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_4"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_5"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_6"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/warning_lift_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/warning_lift_message_7"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/warning_lift_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="我已詳細閱讀並同意以上衛教資訊"
        android:textAlignment="center" />

    <Button
        android:id="@+id/warning_lift_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:padding="10dp"
        android:text="解除警示狀態"
        android:textSize="16sp" />

</LinearLayout>