<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:scrollbars="vertical"
    tools:context=".fragment.SettingFragment$studentNotificationCourse">

    <TextView
        android:id="@+id/textView_rapidAntigenTest_certificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="填寫快篩陽性日期"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditText_rapidAntigenTest_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/notification_dateHint"
            android:inputType="date"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ImageButton_rapidAntigenTest_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:src="@drawable/ic_notification_calendar" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/TextView_rapidAntigenTest_certificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/notification_rapidAntigenTest_certificate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/TextView_rapidAntigenTest_certificate_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:text="@string/notification_rapidAntigenTest_certificate_hint"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_rapidAntigenTest_certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/enable_button"
            android:enabled="true"
            android:text="@string/notification_take_picture"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/Button_rapidAntigenTest_certification_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:src="@drawable/ic_notification_delete"
            android:visibility="invisible" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView_rapidAntigenTest_certification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="30"
        android:visibility="visible" />

    <Button
        android:id="@+id/Button_next_rapid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/enable_button"
        android:enabled="false"
        android:text="@string/nextButton" />

</LinearLayout>