<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".activity.StudentNotificationActivity_PCR">

    <ScrollView
        android:id="@+id/scrollView_pcr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView_PCR_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/notification_PCR_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/RadioGroup_pcr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/Radio_pcr_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_PCR_positive" />


                <LinearLayout
                    android:id="@+id/LinearLayout_pcr_positive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="30dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/TextView_PCR_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/notification_PCR_date"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/EditText_PCR_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:hint="@string/notification_dateHint"
                            android:inputType="date"
                            android:maxLength="10"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/ImageButton_PCR_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_notification_calendar" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="?android:attr/listDivider"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/TextView_pcr_certification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="15dp"
                        android:text="@string/notification_PCR_certification"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TextView_pcr_certification_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/notification_PCR_certification_hint"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/Button_PCR_certification"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/notification_take_picture"
                            android:textSize="12sp" />

                        <ImageButton
                            android:id="@+id/Button_PCR_certification_delete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_notification_delete"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ImageView_PCR_certification"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="30dp"
                        android:background="?android:attr/listDivider"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="是否收到居家隔離通知書"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/RadioGroup_insulation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/Radio_insulation_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="是" />

                        <LinearLayout
                            android:id="@+id/LinearLayout_insulation_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="隔離期間"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/EditText_insulation_startDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:hint="@string/notification_dateHint"
                                    android:inputType="date"
                                    android:maxLength="10"
                                    android:textAlignment="center"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=" ~ "
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/EditText_insulation_endDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:hint="@string/notification_dateHint"
                                    android:inputType="date"
                                    android:maxLength="10"
                                    android:textAlignment="center" />
                            </LinearLayout>
                        </LinearLayout>

                        <RadioButton
                            android:id="@+id/Radio_isolation_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="否" />
                    </RadioGroup>

                </LinearLayout>

                <RadioButton
                    android:id="@+id/Radio_pcr_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="陰性" />

                <RadioButton
                    android:id="@+id/Radio_pcr_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未知" />
            </RadioGroup>

            <Button
                android:id="@+id/Button_next_rapid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/enable_button"
                android:enabled="false"
                android:text="@string/nextButton" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>